--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,8 +12,11 @@ body {
 
 /* apply styles to <header> */
 header {
+  display: flex;
   padding: 20px 35px;
   background-color: #39a6b2;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 header h1 {
@@ -21,15 +24,14 @@ header h1 {
   font-size: 36px;
   color: #fce138;
   margin: 0;
-  display: inline;
 }
+
 header a {
   text-decoration: none;
   color: #fce138;
 }
 
 header nav {
-  float: right;
   margin: 7px 0;
 }
 
